Fix scene form layout bugs (#1177)

--- a/ui/v2.5/src/index.scss
+++ b/ui/v2.5/src/index.scss
@@ -417,7 +417,6 @@ div.dropdown-menu {
   [type="file"] {
     display: block;
     filter: alpha(opacity=0);
-    font-size: 999px;
     min-height: 100%;
     min-width: 100%;
     opacity: 0;
